# estimation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/: CMakeLists.txt  estimation.hpp  kalman_filter.cpp  kalman_filter.hpp  module.cpp  test.cpp
src/estimation/: test.py
